[DOCS] 시술 가격 합산,시술 총 소요 시간 계산,결제 정보 생성 수정